# g0VMCP

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/skills/mohw-it-tender/: SKILL.md
scripts/: enrich_details.py  enrich_open_date.py  ingest_from_pcc_tender.py  ingest_sample.py  mark_stale.py  purge_out_of_scope.py  sync_opendata.py
spec/: erm.dbml  event-storming.md  requirements-coverage.md
spec/features/: tender-classification.feature  tender-ingestion.feature  tender-lifecycle.feature  tender-query.feature
src/g0vmcp/: __init__.py  cli.py  contracts.py
src/g0vmcp/domain/: __init__.py  classification.py  errors.py  events.py  tender.py
src/g0vmcp/ingestion/: __init__.py  backoff.py  cf_http.py  fetch_log.py  fetcher.py  http.py  mappers.py  opendata.py  pipeline.py  scope.py
src/g0vmcp/mcp_server/: __init__.py  __main__.py  server.py  service.py
src/g0vmcp/repository/: __init__.py  schema.py  sqlite_repo.py
tests/: test_security.py
tests/domain/: test_classification.py  test_tender_lifecycle.py
tests/ingestion/: conftest.py  test_cf_http.py  test_enrich_open_date.py  test_fetcher.py  test_mappers.py  test_opendata.py  test_pipeline.py  test_scope.py
tests/ingestion/fixtures/: award_detail.html  award_halfmonth.xml  tender_halfmonth.xml
tests/integration/: test_end_to_end.py
tests/mcp/: conftest.py  test_mcp_tools.py  test_query_service.py
tests/repository/: test_sqlite_repo.py
