[project]
name = "g0vmcp"
version = "0.1.0"
description = "政府採購標案情報聚合 MCP — 補完 pcc-tender 缺漏欄位 (B 方案)"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.2.0",
    "httpx>=0.27",
    "selectolax>=0.3",      # 明細頁 HTML 解析 (任務①)
    "aiosqlite>=0.20",      # 儲存層 (任務②)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/g0vmcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
